<resources>
    <string name="app_name" translatable="false">Grid Walking</string>
    <string name="app_subtitle">Discover Earth. One square at a time.</string>
    <string name="app_title" translatable="false">Grid Walking</string>
    <string name="osmdroid_attribution">Based on osmdroid</string>
    <string name="start_button">START</string>
    <string name="mark_visited">Mark visited</string>
    <string name="created_by">Created by frodegill@gmail.com</string>
    <string name="snap_to_centre">Snap to centre</string>
    <string name="score">Score:</string>
    <string name="bonus">Bonus:</string>
    <string name="speed">%dkm/h</string>
    <string name="speed_and_height">%dkm/h | %dmasl</string>
    <string name="gps">Quality:</string>
    <string name="sync_highscore">Sync highscore</string>
    <string name="settings">Settings</string>
    <string name="your_position">Your position:</string>
    <string name="total_players">Total players:</string>
    <string name="show_synced_grids">Show others grids</string>
    <string name="show_grids">Show grids</string>
    <string name="Anonymous">Anonymous</string>
    <string name="restore_button">Restore from file</string>
    <string name="help_button">Help</string>
    <string name="map_source">Map Source</string>
</resources>
